# semantic-bus

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PROMPT.md  README.md  pyproject.toml
scripts/: TESTING_ROUTING.md  example_multi_agent_orchestration.py  test_agent_calculator.py  test_agent_intent_calculation.py  test_agent_intent_translate_and_summarize.py  test_agent_intent_translation.py  test_agent_summarizer.py  test_agent_translator.py  test_event_streaming.py  test_task_queue.py
src/: __init__.py
src/events/: __init__.py  manager.py  models.py  stream.py
src/llm/: __init__.py  factory.py
src/orchestration/: __init__.py  flow_planner.py
src/policy/: __init__.py  engine.py
src/protocol/: __init__.py  envelope.py
src/queue/: __init__.py  factory.py  kafka_queue.py  memory.py  ports.py  rabbitmq_queue.py  redis_queue.py  worker.py
src/registry/: __init__.py  agent.py  registry.py
src/routing/: __init__.py  queued_router.py  router.py  semantic_matcher.py
src/schema/: __init__.py  view_registry.py
src/session/: __init__.py  manager.py  session.py
src/storage/: __init__.py  factory.py  memory.py  models.py  ports.py  redis.py  sqlalchemy.py
src/trace/: __init__.py  store.py
src/transport/: __init__.py  app.py  handler.py  queue.py
